# PlayOutVue

./: .gitignore  README.md  list_media.rs  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  compile_err.txt  tauri.conf.json
src-tauri/src/: caspar.rs  caspar_config.rs  db.rs  diagnostics.rs  filesystem.rs  lib.rs  media_server.rs  playlist.rs  runtime_settings.rs  scanner.rs  stream.rs  trimmer.rs
src/assets/: main.css
src/components/: CasparConfigModal.vue  ComplianceModule.vue  FileBrowserModal.vue  LiveEntryDialog.vue  MediaInspector.vue  MediaLibrary.vue  MediaTreeNode.vue  PlaylistControls.vue  PreviewMonitor.vue  RundownList.vue  SettingsModal.vue  TrimPanel.vue
src/composables/: useDragState.ts
src/services/: caspar.ts  obs.ts  playout.ts
src/stores/: mediaDefaults.ts  rundown.ts  settings.ts
