[package]
name = "app"
version = "2.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tokio = { version = "1.50.0", features = ["full"] }
rosc = "0.11.4"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs-next = "2.0"
image = { version = "0.25", default-features = false, features = ["png"] }
quick-xml = { version = "0.38", features = ["serialize"] }

# src-tauri/Cargo.toml

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile everything together for maximum optimization
lto = true # Link Time Optimization (removes dead code)
opt-level = "s" # Optimize for binary size ('z' is also good)
strip = true # Automatically strip symbols from the binary
